Padronização, modelagem de rotas e organização dos components.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.6",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "knex": "^0.19.4",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "promise": "^8.0.3",
     "rxjs": "~6.4.0",
+    "sequelize": "^5.19.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
