--- a/node-sequelize/config/config.json
+++ b/node-sequelize/config/config.json
@@ -2,7 +2,7 @@
     "development": {
     "username": "victor",
     "password": 30165601,
-    "database": "database_development",
+    "database": "xbot",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
